# nightwatch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README  README.md  main.c
.github/workflows/: build.yml
cmake/: playdate.cmake  playdate_game.cmake
game/: main.lua  pdxinfo
game/res/fonts/: handwriting.fnt
game/res/launcher/card-highlighted/: animation.txt
game/res/sprites/venus/: venus_03.tex  venus_04.tex  venus_13.tex  venus_14.tex  venus_15.tex  venus_16.tex  venus_20.tex  venus_21.tex  venus_25.tex  venus_26.tex  venus_28.tex  venus_30.tex  venus_31.tex  venus_33.tex  venus_35.tex
game/res/textures/: base.tex  column_cypher.tex  column_symbol_0.tex  column_symbol_1.tex  column_symbol_2.tex  column_symbol_3.tex  column_symbol_4.tex  column_symbol_5.tex  fence_closed.tex  fence_open.tex  monster_idle.tex  museum_history.tex  note.tex  picture_0.tex  picture_1.tex  picture_10.tex  picture_11.tex  picture_12.tex  picture_13.tex  picture_14.tex  picture_2.tex  picture_3.tex  picture_4.tex  picture_5.tex  picture_6.tex  picture_7.tex  picture_8.tex  picture_9.tex  picture_horse.tex  picture_key.tex  picture_man.tex  picture_owl.tex  picture_sword.tex  picture_telescope.tex  roman_1.tex  roman_2.tex  roman_3.tex  roman_4.tex  sign_employeeonly.tex  sign_wc_man.tex  (+16 more)
game/res/textures/dither/: bayer16tile2.tex
game/res/textures/sprites/venus/: 00.tex  01.tex  02.tex  03.tex  04.tex  05.tex  06.tex  07.tex
include/: a_star.h  camera.h  common.h  constants.h  enemy.h  game.h  game_state.h  gfx.h  item.h  map.h  map_generator.h  map_reader.h  map_renderer.h  mapgen.h  minimap.h  minimap_renderer.h  notes.h  object.h  pd_system.h  player.h  random.h  renderer.h  sound.h  texture.h  types.h  utils.h  view.h
include/data/: cbuff.h
include/mapgen/: mapgen.h  room.h  room_library.h
libs/minigl/: CMakeLists.txt
libs/minigl/include/: frame.h  minigl.h  minigl_types.h  object.h  objread.h  texture.h
libs/minigl/include/minigl/: camera.h  common.h  frame.h  minigl.h  object.h  rasterizer.h  system.h  texture.h  utils.h
libs/minigl/src/: frame.c  minigl.c  object.c  objread.c  rasterizer.c  system.c  texture.c  utils.c
libs/minigl/tests/: simple_triangle.c
libs/minigl/tools/png2tex/: main.c
res/: process.sh
res/maps/: demo.txt
res/sprites/venus/: venus_00.tex  venus_01.tex  venus_02.tex  venus_03.tex  venus_04.tex  venus_05.tex  venus_06.tex  venus_07.tex  venus_08.tex  venus_09.tex  venus_10.tex  venus_11.tex  venus_12.tex  venus_13.tex  venus_14.tex  venus_15.tex  venus_16.tex  venus_17.tex  venus_18.tex  venus_19.tex  venus_20.tex  venus_21.tex  venus_22.tex  venus_23.tex  venus_24.tex  venus_25.tex  venus_26.tex  venus_27.tex  venus_28.tex  venus_29.tex  venus_30.tex  venus_31.tex  venus_32.tex  venus_33.tex  venus_34.tex  venus_35.tex
res/textures/: ceil0.tex  floor0.tex  moka.tex  wall0.tex
src/: a_star.c  camera.c  common.c  enemy.c  game.c  gfx.c  item.c  map.c  map_generator.c  map_reader.c  map_renderer.c  mapgen.c  minimap.c  minimap_render.c  notes.c  object.c  player.c  random.c  renderer.c  sound.c  texture.c  utils.c  view.c
src/data/: cbuff.c
src/mapgen/: mapgen.c  room.c
